# enum-flags

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LocalPresets.json.empty  ProjectPresets.json  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt
